update translations files priority list

--- a/index.html
+++ b/index.html
@@ -109,7 +109,27 @@
 
 <h3 id="do-i-need-to-translate-everything">Do I need to translate everything?</h3>
 
-<p>No. We try to keep the amount of phrases at minimum, but if you don&rsquo;t have enough time to go through all of them, just do as much as you can, starting with the first page. The phrases are roughly sorted in order of importance. Furthermore, someone else may later jump in and take it where you left off.</p>
+<p>No. We try to keep the amount of phrases at minimum, but if you don&rsquo;t have enough time to go through all of them, just do as much as you can, starting with the most important files first. Here is a list of files sorted by their importance:</p>
+
+<ul>
+<li><code>strings_main.xml</code></li>
+<li>Any other <code>strings_*.xml</code>:
+
+<ul>
+<li><code>strings_filter.xml</code>, <code>strings_tunnel.xml</code>, etc</li>
+</ul></li>
+<li><code>index.html</code></li>
+<li>Any <code>strings_*.properties</code>:
+
+<ul>
+<li><code>strings_repo.properties</code>, <code>strings_filters.properties</code>, etc</li>
+</ul></li>
+<li>Any <code>*.html</code>:
+
+<ul>
+<li><code>help.html</code>, <code>donate.html</code>, etc</li>
+</ul></li>
+</ul>
 
 <h3 id="what-if-my-language-is-not-listed">What if my language is not listed?</h3>
 
