add note to insiders

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 
 <p>That&rsquo;s it! Join the community, support Blokada, and have fun with us!</p>
 
+<p><em>Blokada is an open source project. There is no financial reward or cost involved with participation. You are free to resign anytime, we only ask you to let us know once you decide to do so.</em></p>
+
       
     </div>
     
