fix static path

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 
 <p>The first voting was designed to test if we want to change the name at all. Surprisingly, <strong>89% of users (from 1286 votes) is happy with the name <em>Blokada</em></strong>, or at least thinks we should not change it.</p>
 
-<p><img src="/static/posts/branding_1.png" alt="Branding vote 1" /></p>
+<p><img src="/img/branding_1.png" alt="Branding vote 1" /></p>
 
 <p>This was a bit of surprise to me, but since rebranding is a significant amount of work and I would prefer not to do it, I was happy with the results ;).</p>
 
 <p>Users who voted to change the name was asked then to vote on one of the existing alternative suggestions, or propose their own. We got some really interesting suggestions, so just to exhaust the topic of branding I decided to run one more survey. The second survey was just focusing on those suggestions, to see which one of them is the best, in case we decide to rebrand after all in the future.</p>
 
-<p><img src="/static/posts/branding_2.png" alt="Branding vote 2" /></p>
+<p><img src="/img/branding_2.png" alt="Branding vote 2" /></p>
 
 <p>We got 358 votes (this survey was running only a few days). The highest number of voters (23%) voted on <em>Blockade</em>. Two next most popular choices were <em>Blocky McBlockface</em> and <em>BlockIt</em>, both with roughly 11% of votes.</p>
 
