--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       
       
 
-<p>We have been positively surprised by your interest in Blokada VPN. Over the last several weeks we have been working hard to improve it and provide features you ask for. Among other things, we have added multi device support, improved the UI design based on your feedback, added support for x86 devices, and integrated several payment options. Today, we are adding another way to get access to Blokada VPN - using Stellar platform. Here I explain how to start, and how to use it to purchase Blokada VPN, without paying.</p>
+<p>We have been positively surprised by your interest in Blokada VPN. Over the last several weeks we have been working hard to improve it and provide features you ask for. Among other things, we have added multi device support, improved the UI design based on your feedback, added support for x86 devices and integrated several payment options. Today, we are adding another way to get access to Blokada VPN - using the Stellar platform. Here I explain how to start, and how to use it to purchase Blokada VPN, without paying.</p>
 
 <h3 id="what-is-stellar">What is Stellar?</h3>
 
@@ -90,12 +90,12 @@
 
 <p><a href="https://keybase.io/download">Keybase</a> is a messaging app as well as a cryptocurrency wallet. It&rsquo;s a great way to start using Stellar.</p>
 
-<h3 id="why-to-use-stellar-to-get-blokada-vpn">Why to use Stellar to get Blokada VPN?</h3>
+<h3 id="why-use-stellar-to-get-blokada-vpn">Why use Stellar to get Blokada VPN?</h3>
 
 <ul>
 <li>No fees paid to banks</li>
 <li>Payment is very fast and simple</li>
-<li>No need to provide email address</li>
+<li>No need to provide an email address</li>
 </ul>
 
 <p>Last but not least, there are several ways to earn free Stellar Lumens, which you can use to get access to Blokada VPN for free!</p>
